<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <EditText
        android:id="@+id/add_product_in_day_dialog.enter_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_weight"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/add_product_in_day_dialog.cancel_button"
            android:background="@drawable/dialog_button"
            android:textColor="@color/black"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/add_product_in_day_dialog.ok_button"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/dialog_button"
            android:text="@string/ok"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>